# jaac

./: .gitignore  CHANGELOG.md  README.md  configs.js  data-sync.js  extension.js  helper.js  package-lock.json  package.json  pyproject.toml  requirements.txt
conf/: custom_react_prompt.yaml  prompts.yaml  react_prompt.yaml  sample.env
docs/: sample.py  test.py
docs/test-files/: main.py  math_utils.py
examples/: custom-agent.ipynb  understand-python-ReAct-agent.ipynb  understand-python-agent.ipynb
notebook-examples/: agent.ipynb  read-file-and-answer.ipynb  write-python-ReAct-agent.ipynb
processor/: api.py  process.py
processor/agents/: __init__.py  reactagent.py  simpleqa.py
processor/datastore/: chroma-store.py  chroma_store.py
processor/router/: simplerouter.py
